--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="content">
             <div class="w50">
-                <img src="images/myPic2.jpg" alt="" class="proPic">
+                <img src="images/profilepic.jpeg" alt="" class="proPic">
             </div>
             <div class="contentBx w50">
                 <h3>Who am I?</h3>
