FIxed icons and made updates to them/skill bios

--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <title>Estevan Salazar</title>
     <link rel="stylesheet" href="style.css">
     <script src="ext.js" language="javascript"></script>
-    <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css"
-        integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous">
 </head>
 
 <body>
@@ -73,34 +70,34 @@
         </div>
         <div class="content">
             <div class="skillsBx">
-                <i class="fa fa-gamepad fa-4x"></i>
-                <h3>Web Design CSS</h3>
-                <p>Random Junky junky waffles junky</p>
+                <ion-icon name="construct"></ion-icon>
+                <h3>Troubleshooting</h3>
+                <p>Insert about troubleshooting</p>
             </div>
             <div class="skillsBx">
-                <i class="fa fa-gamepad fa-4x"></i>
-                <h3>Pro Gamer</h3>
-                <p>Gaming by day, slayin noobs at night</p>
+                <ion-icon name="logo-html5"></ion-icon>
+                <h3>HTML 5</h3>
+                <p>Insert about knowing how to use HTML 5</p>
             </div>
             <div class="skillsBx">
-                <i class="fa fa-gamepad fa-4x"></i>
-                <h3>Pro Gamer</h3>
-                <p>Gaming by day, slayin noobs at night</p>
+                <ion-icon name="logo-css3"></ion-icon>
+                <h3>CSS3</h3>
+                <p>Insert about how this website was styled and formatted with CSS3</p>
             </div>
             <div class="skillsBx">
-                <i class="fa fa-gamepad fa-4x"></i>
-                <h3>Pro Gamer</h3>
-                <p>Gaming by day, slayin noobs at night</p>
+                <ion-icon name="logo-android"></ion-icon>
+                <h3>Android</h3>
+                <p>Insert about comfortablity with android</p>
             </div>
             <div class="skillsBx">
-                <i class="fa fa-gamepad fa-4x"></i>
-                <h3>Pro Gamer</h3>
-                <p>Gaming by day, slayin noobs at night</p>
+                <ion-icon name="contacts"></ion-icon>
+                <h3>Team player</h3>
+                <p>Insert bio about teamwork</p>
             </div>
             <div class="skillsBx">
-                <i class="fa fa-gamepad fa-4x"></i>
-                <h3>Pro Gamer</h3>
-                <p>Gaming by day, slayin noobs at night</p>
+                <ion-icon name="book"></ion-icon>
+                <h3>Studying for my exams</h3>
+                <p>Insert bio about studying</p>
             </div>
         </div>
     </section>
@@ -118,7 +115,7 @@
                 <div class="contactInfoBx">
                     <div class="box">
                         <div class="icon">
-                            <i class="fa fa-map-marker"></i>
+                            <ion-icon name="locate"></ion-icon>
                         </div>
                         <div class="text">
                             <h3>Address</h3>
@@ -127,7 +124,7 @@
                     </div>
                     <div class="box">
                         <div class="icon">
-                            <i class="fa fa-phone"></i>
+                            <ion-icon name="phone-portrait"></ion-icon>
                         </div>
                         <div class="text">
                             <h3>Phone no :</h3>
@@ -136,7 +133,7 @@
                     </div>
                     <div class="box">
                         <div class="icon">
-                            <i class="fa fa-envelope-o"></i>
+                            <ion-icon name="mail"></ion-icon>
                         </div>
                         <div class="text">
                             <h3>Email Address</h3>
@@ -148,12 +145,12 @@
                     <div class="boxSocial">
                         <div class="icon">
                             <a href="https://www.linkedin.com/" target="_blank">
-                                <i class="fa fa-linkedin-square"></i>
+                                <ion-icon name="logo-linkedin"></ion-icon>
                             </a>
                         </div>
                         <div class="icon">
                             <a href="https://www.instagram.com/tebantevan/" target="_blank">
-                                <i class="fa fa-instagram"></i>
+                                <ion-icon name="logo-instagram"></ion-icon>
                             </a>
                         </div>
                     </div>
@@ -175,6 +172,9 @@
     <footer class="copyright">
         <p>© 2021, estevansalazar.com, All rights reserved</p>
     </footer>
+
+    <!-- For Icons-->
+    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 </body>
 
 </html>
