Added Profile pic

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="content">
             <div class="w50">
-                <img src="images/profilepic.jpeg" alt="" class="proPic">
+                <img src="images/tebanProfile.png" alt="" class="proPic">
             </div>
             <div class="contentBx w50">
                 <h3>Who am I?</h3>
