Added contactMe send email. linked

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Estevan Salazar</title>
     <link rel="stylesheet" href="style.css">
     <script src="ext.js" language="javascript"></script>
+    <script type="module" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule="" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.js"></script>
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 </head>
 
 <body>
@@ -157,12 +160,14 @@
                 </div>
             </div>
             <div class="formBx">
-                <form>
+                <form action="https://formsubmit.co/estevansalazar95@gmail.com" method="POST"/>
                     <h3>Message Me</h3>
-                    <input type="text" placeholder="Full Name">
-                    <input type="email" placeholder="Email">
-                    <textarea name="" id="" rows="6" placeholder="Your Message"></textarea>
-                    <input type="submit" value="Send Message" name="" />
+                    <input type="text" placeholder="Full Name"> name="name" required/>
+                    <input type="email" placeholder="Email"> name="email" required/>
+                    <textarea name="message" rows="6" placeholder="Your Message"></textarea>
+                    <button type="submit" class="button">
+                        <span class="button_text">Send Message</span>
+                    </button>
                 </form>
             </div>
         </div>
@@ -172,9 +177,6 @@
     <footer class="copyright">
         <p>© 2021, estevansalazar.com, All rights reserved</p>
     </footer>
-
-    <!-- For Icons-->
-    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 </body>
 
 </html>
