--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     More elaboration on bio or objective?
                 </p>
                 <div class="heading bottom">
-                    <a href="images/resume.docx" target="_blank" class="btn round">Download Resume</a>
+                    <a href="images/estevanSalazarResume.pdf" target="_blank" class="btn round">Download Resume</a>
                     <div class="bt">
                         <b>Email:</b> estevansalazar95@gmail.com<br>
                         <b>Location:</b> Phoenix, Arizona
